@@ -2,6 +2,8 @@ Development Portal (2017-07-28 shi)
 ==============================
 Added font css for Google translate in SAVi
 Updated SAVi participating-org layout for version 2.02++ only
+Updated Print-friendly css
+Added support for location display in SAVi (ver. 2.02++)
 
 
 Development Portal (2017-06-19 shi)
